# luna25-uet

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  dataloader.py  experiment_config.py  inference.py  main.py  processor.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: build.yml
loss_function/: __init__.py  dice.py  focal.py  lovasz.py  tversky.py
models/: model_3d.py  unet_3d.py
preprocessing/: convert2nodule_block.py  extract_nodules.py  process_mask.py  utils.py
resources/I3D_UNet-3D-20251208_090637-cls-BCEDice/: best_ckpt.pth
