[project]
name = "luna25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.0",
    "monai==1.4.0",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "python-multipart>=0.0.20",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "simpleitk==2.4.1",
    "torch==2.5.1",
    "torchsampler>=0.1.2",
    "tqdm==4.67.1",
    "uvicorn>=0.38.0",
]
